--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "framer": "^1.3.4",
+    "framer-motion": "^4.1.17",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
@@ -23,6 +26,7 @@
     "typescript": "^4.3.4"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.1",
     "prettier": "2.2.1"
   },
   "keywords": [
