--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-burger-menu": "^2.9.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.1",
