--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "typescript": "^4.3.4",
