--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.0.2",
     "typescript": "^4.3.4",
     "yarn": "^1.22.10"
   },
