--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "firebase": "^9.1.1",
+    "axios": "^0.24.0",
+    "firebase": "^9.6.1",
     "framer": "^1.3.4",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.6.2",
-    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
@@ -18,9 +18,11 @@
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-source-firestore": "^1.0.3",
     "gatsby-source-microcms": "^2.0.0",
     "gatsby-transformer-sharp": "^3.6.0",
+    "node-fetch": "2.6.6",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
