--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@reach/router": "^1.3.4",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
     "firebase": "^9.6.1",
     "framer": "^1.3.4",
     "framer-motion": "^4.1.17",
@@ -18,11 +19,11 @@
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-source-firestore": "^1.0.3",
     "gatsby-source-microcms": "^2.0.0",
     "gatsby-transformer-sharp": "^3.6.0",
-    "node-fetch": "2.6.6",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
