--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer": "^1.3.4",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
