--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@reach/router": "^1.3.4",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
-    "firebase": "^9.6.1",
+    "firebase": "^9.6.4",
+    "firebase-admin": "9.12.0",
     "framer": "^1.3.4",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.6.2",
